--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,40 @@
-<h1>Burgers!</h1>
+<h1>Eat-Da-Burger</h1>
 
-<h2>Burgers that have not been eaten!</h2>
+<div id="add-burger">
+  <h2>Add a Burger</h2>
+  <form class="create-form">
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
+    <div class="form-group">
+      <label for="burger-name">Burger Name:</label>
+      <input type="text" id="burger-name" name="name">
+    </div>
+
+    <button type="submit">Add Burger</button>
+  </form>
+</div>
+
+<div id="not-devoured-burgers">
+  <h2>Burgers that have not been eaten</h2>
+  <div class="burgers">
+    <ul>
+      {{#each burgers}}
+      {{#unless devoured}}
       {{> burgers/burger-block devoured=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
+      {{/unless}}
+      {{/each}}
+    </ul>
+  </div>
+</div>
 
-<h2>Burgers that have been devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
+<div id="devoured-burgers">
+  <h2>Burgers that have been devoured</h2>
+  <div class="burgers">
+    <ul>
+      {{#each burgers}}
+      {{#if devoured}}
       {{> burgers/burger-block devoured=true}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="burger-name">Burger Name:</label>
-    <input type="text" id="burger-name" name="name">
+      {{/if}}
+      {{/each}}
+    </ul>
   </div>
-
-  <div class="form-group">
-    <label for="devoured">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Have not eaten
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
+</div>
