--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,4 +1,5 @@
-<li>
+<li class="burger-item">
+	{{id}}. 
 	{{burger_name}}
     {{#unless devoured}}
 	<button class="change-devour" data-id="{{id}}">
